--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -78,29 +78,29 @@
   "sso-connection-successfully-updated": "SSO connection has been successfully updated",
   "sso-connection-successfully-created": "SSO connection has been successfully created",
   "all-backends": "Backends",
-  "all-teams": "Teams",
-  "successfully-joined": "You have successfully joined the team.",
+  "all-workspaces": "Workspaces",
+  "successfully-joined": "You have successfully joined the workspace.",
   "successfully-subscribed": "You have successfully subscribed.",
   "create-backend": "Create Backend",
   "remove-backend": "Remove Backend",
-  "create-team": "Create Team",
-  "remove-team": "Remove Team",
-  "remove-team-warning": "Deleting the team will delete all resources and data associated with the team forever. This action cannot be undone.",
-  "team-created": "Team created successfully.",
-  "leave-team": "Leave Team",
-  "leave-team-success": "You have left the team successfully.",
-  "choose-team": "Choose your team",
-  "allow-team": "Allow team members to login using an Identity Provider.",
-  "members-of-a-team": "Members of a team have access to specific areas, such as a new release or a new application feature.",
+  "create-workspace": "Create Workspace",
+  "remove-workspace": "Remove Workspace",
+  "remove-workspace-warning": "Deleting the workspace will delete all resources and data associated with the workspace forever. This action cannot be undone.",
+  "workspace-created": "Workspace created successfully.",
+  "leave-workspace": "Leave Workspace",
+  "leave-workspace-success": "You have left the workspace successfully.",
+  "choose-workspace": "Choose your workspace",
+  "allow-workspace": "Allow workspace members to login using an Identity Provider.",
+  "members-of-a-workspace": "Members of a workspace have access to specific areas, such as a new release or a new application feature.",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
-  "no-active-team": "You do not have any active team.",
+  "no-active-workspace": "You do not have any active workspace.",
   "coming-soon": "Coming Soon",
   "provision": "Provision and de-provision users with your directory provider.",
   "name": "Name",
   "email": "Email",
   "members": "Members",
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
-  "confirm-delete-member": "Confirm delete member",
+  "confirm-delete-member": "Remove from workspace",
   "role": "Role",
   "url": "URL",
   "action": "Action",
@@ -113,7 +113,7 @@
   "unknown-error": "Unknown Error",
   "configure": "Configure",
   "add-member": "Add Member",
-  "add-member-message": "Add an already existing user to a team",
+  "add-member-message": "Add an already existing user to a workspace",
   "add-connection": "Add Connection",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
   "saml-config-updated": "SAML Config updated successfully.",
@@ -146,8 +146,8 @@
   "directory-sync": "Directory Sync",
   "audit-logs": "Audit Logs",
   "api-keys": "API Keys",
-  "team": "Team",
-  "team-name-placeholder": "Team Name",
+  "workspace": "Workspace",
+  "workspace-name-placeholder": "Workspace Name",
   "update-account": "Update Account",
   "update-password": "Update Password",
   "current-password": "Current Password",
@@ -162,19 +162,19 @@
   "configure-singlesignon": "SAML Single Sign-On",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
   "members-deleted": "Members deleted successfully.",
-  "team-members": "Team Members",
-  "team-connections": "Team SSO Connections",
+  "workspace-members": "Workspace Members",
+  "workspace-connections": "Workspace SSO Connections",
   "member-role-updated": "Member role updated successfully.",
   "member-deleted": "Member deleted successfully.",
-  "team-settings": "Team Settings",
-  "team-slug": "Team Slug",
-  "team-slug-description": "A unique ID used to identify this team in URLs.",
-  "team-domain": "Domain",
+  "workspace-settings": "Workspace Settings",
+  "workspace-slug": "Workspace Slug",
+  "workspace-slug-description": "A unique ID used to identify this workspace in URLs.",
+  "workspace-domain": "Domain",
   "acs-url": "ACS URL",
   "public_display_name": "The name of the backend",
   "metadata-url": "Metadata URL",
   "metadata-xml": "Metadata XML",
-  "saml-connection-established": "Single Sign-On connection is enabled for your team.",
+  "saml-connection-established": "Single Sign-On connection is enabled for your workspace.",
   "products": "Products",
   "account-info": "Account Details",
   "new-api-key": "New API Key",
@@ -194,15 +194,15 @@
   "copy-to-clipboard": "Copy",
   "copied-to-clipboard": "Copied to clipboard",
   "api-key": "API Key",
-  "remove-team-confirmation": "Are you sure you want to delete the team? Deleting the team will delete all resources and data associated with the team forever.",
-  "team-removed-successfully": "Team removed successfully.",
-  "leave-team-confirmation": "Are you sure you want to leave the team? You'll lose access to all resources and data associated with the team.",
+  "remove-workspace-confirmation": "Are you sure you want to delete the workspace? Deleting the workspace will delete all resources and data associated with the workspace forever.",
+  "workspace-removed-successfully": "Workspace removed successfully.",
+  "leave-workspace-confirmation": "Are you sure you want to leave the workspace? You'll lose access to all resources and data associated with the workspace.",
   "remove-backend-confirmation": "Are you sure you want to delete the backend? Deleting the backend will delete all resources and data associated with the backend forever.",
   "all-products": "All Products",
-  "new-team": "New Team",
+  "new-workspace": "New Workspace",
   "profile-picture": "Profile picture",
   "sso-connection-deleted": "SSO Connection deleted successfully",
-  "team-not-found": "Team not found",
+  "workspace-not-found": "Workspace not found",
   "delete-sso-connection": "Delete SSO Connection",
   "delete-sso-connection-confirmation": "Are you sure you want to delete this SSO Connection? This action can not be undone.",
   "sp_saml_config_title": "Service Provider (SP) SAML Configuration",
@@ -235,7 +235,7 @@
   "administrator-settings": "Administrator settings",
   "dashboard": "Dashboard",
   "users": "Users",
-  "teams": "Teams",
+  "workspaces": "Workspaces",
   "assistants": "Assistants",
   "backends": "Backends",
   "profile": "Profile",
