--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -49,18 +49,16 @@
   "backend": "Backend",
   "you-have-logged-in-using": "You have logged in using",
   "get-started": "Get Started",
-  "login": "Login using an existing account",
   "login-error": "There was a problem with your login.",
   "email-login-error": "Something went wrong while sending the email. Please try again later.",
   "email-login-success": "A sign in link has been sent to your email address. The link will expire in 24 hours.",
-  "dont-have-an-account": "Don`t have an account?",
-  "create-a-free-account": "Create a free account",
+  "dont-have-an-account": "Don't have an account?",
   "sign-up": "Sign up",
   "sign-up-message": "Signing up signifies that you have read and agree to the Terms of Service and our Privacy Policy.",
   "sign-in": "Sign in",
   "sign-in-with-email": "Sign in with Email",
   "sign-in-with-password": "Sign in with Password",
-  "create-a-new-account": "Create a new account",
+  "create-a-new-account": "Sign up",
   "create-account": "Create Account",
   "change-password": "Change Password",
   "already-have-an-account": "Already have an account?",
