--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -93,6 +93,8 @@
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
   "members-of-a-workspace": "Members of a workspace have access to specific areas, such as a new release or a new application feature.",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
+  "or-sign-in-with": "Or Sign In With",
+  "password-is-required": "The Password field is required",
   "no-active-workspace": "You do not have any active workspace.",
   "coming-soon": "Coming Soon",
   "provision": "Provision and de-provision users with your directory provider.",
