Dynamic Page Titles & i18n Enhancements (#58)
* Add missing i18n translation

* Add i18n translations on the analytics page

* Add page titles, issue #39

* Improve i18n

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -4,6 +4,8 @@
   "table-column-type": "Type",
   "table-column-email": "Email",
   "table-column-user-role": "Role",
+  "table-column-members": "Members",
+  "table-column-created-at": "Created At",
   "table-column-backend": "Backend",
   "table-column-apikey": "API Key",
   "table-column-apiendpoint": "API Endpoint",
@@ -93,6 +95,8 @@
   "allow-workspace": "Allow workspace members to login using an Identity Provider.",
   "members-of-a-workspace": "Members of a workspace have access to specific areas, such as a new release or a new application feature.",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
+  "or-sign-in-with": "Or Sign In With",
+  "password-is-required": "The Password field is required",
   "no-active-workspace": "You do not have any active workspace.",
   "coming-soon": "Coming Soon",
   "provision": "Provision and de-provision users with your directory provider.",
@@ -236,6 +240,10 @@
   "administrator-settings": "Administrator settings",
   "dashboard": "Dashboard",
   "users": "Users",
+  "conversations": "Conversations",
+  "messages": "Messages",
+  "daily-usage": "Daily Usage",
+  "most-active-workspaces": "Most active workspaces",
   "workspaces": "Workspaces",
   "assistants": "Assistants",
   "backends": "Backends",
