tab-less UI for workspace editing

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -147,6 +147,7 @@
   "audit-logs": "Audit Logs",
   "api-keys": "API Keys",
   "workspace": "Workspace",
+  "workspace-name-label": "Name",
   "workspace-name-placeholder": "Workspace Name",
   "update-account": "Update Account",
   "update-password": "Update Password",
@@ -168,6 +169,8 @@
   "member-deleted": "Member deleted successfully.",
   "workspace-settings": "Workspace Settings",
   "workspace-slug": "Workspace Slug",
+  "workspace-slug-label": "Slug",
+  "workspace-slug-placeholder": "A unique ID used to identify this workspace in URLs.",
   "workspace-slug-description": "A unique ID used to identify this workspace in URLs.",
   "workspace-domain": "Domain",
   "acs-url": "ACS URL",
