--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -99,6 +99,7 @@
   "name": "Name",
   "email": "Email",
   "members": "Members",
+  "manage-members": "Manage members",
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "confirm-delete-member": "Remove from workspace",
   "role": "Role",
