--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -11,6 +11,7 @@
   "table-column-model": "Model",
   "table-column-description": "Description",
   "table-column-actions": "Actions",
+  "table-column-owner": "Owner",
   "discovery-url": "Discovery URL",
   "connection-name": "Connection Name",
   "connection-description": "Connection Description",
