--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -105,6 +105,8 @@
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "confirm-delete-member": "Remove from workspace",
   "role": "Role",
+  "select_role_placeholder": "Select a role...",
+  "select_owner_placeholder": "Select an owner...",
   "url": "URL",
   "action": "Action",
   "created-at": "Created At",
@@ -249,5 +251,6 @@
   "tools": "Tools",
   "openai-backend": "OpenAI API",
   "localai-backend": "LocalAI Server",
-  "save": "Save"
+  "save": "Save",
+  "select_assistant": "Select an assistant"
 }
