Tool creation / editing internationalization

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -22,6 +22,7 @@
   "client-secret": "Client Secret",
   "create-oidc-connection": "Create OIDC Connection",
   "create-saml-connection": "Create SAML Connection",
+  "create-tool": "Create Tool",
   "all-samlconnections": "SSO Connections",
   "create_assistant_field_name_placeholder": "Name your Assistant",
   "create_assistant_field_name_description": "The name users will see in the app",
@@ -34,9 +35,15 @@
   "enable_signup": "Enable Signup",
   "create_assistant_field_select_model_placeholder": "Select a model",
   "create_assistant_field_select_model_description": "The model (LLM) used",
-  "system-prompt": "Instructions",
   "create_assistant_field_system_prompt_placeholder": "What does this Assistant do? How does it behave? What should it avoid doing?",
   "create_assistant_field_system_prompt_description": "The prompt used to initialize conversations",
+  "system-prompt": "Instructions",
+  "create_tool_field_name_label": "Name",
+  "create_tool_field_name_placeholder": "Display name of this tool...",
+  "create_tool_field_baseurl_label": "Base url",
+  "create_tool_field_baseurl_placeholder": "Base url of the ChatGptRetrievalPlugin server...",
+  "create_tool_field_apikey_label": "Api key",
+  "create_tool_field_apikey_placeholder": "Api key of the ChatGptRetrievalPlugin server...",
   "token-limit": "Token Limit",
   "create_assistant_field_token_limit_placeholder": "Indicate a token limit",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
@@ -87,6 +94,7 @@
   "successfully-subscribed": "You have successfully subscribed.",
   "create-backend": "Create Backend",
   "remove-backend": "Remove Backend",
+  "remove-tool": "Remove Tool",
   "create-workspace": "Create Workspace",
   "remove-workspace": "Remove Workspace",
   "remove-workspace-warning": "Deleting the workspace will delete all resources and data associated with the workspace forever. This action cannot be undone.",
@@ -206,6 +214,7 @@
   "copy-to-clipboard": "Copy",
   "copied-to-clipboard": "Copied to clipboard",
   "api-key": "API Key",
+  "remove-tool-confirmation": "Are you sure you want to delete this tool? Deleting the tool will delete all resources and data associated with the tool forever.",
   "remove-workspace-confirmation": "Are you sure you want to delete the workspace? Deleting the workspace will delete all resources and data associated with the workspace forever.",
   "workspace-removed-successfully": "Workspace removed successfully.",
   "leave-workspace-confirmation": "Are you sure you want to leave the workspace? You'll lose access to all resources and data associated with the workspace.",
