Integrate Anthropic LLM Support (#71)
* Start implementing anthropic

* Start migrating to llmosaic

* Keep implementing

* Keep implementing

* Bump up to anthropic 0.1.7

* Keep implementing

* Upgrade to llmosaic version 0.1.8

* Add modules as a path

* Add anthropic to the Backend UI selection

* Refactor LLM Provider Code for Streamlined Operation

* Start migrating from functions to tools

* Bump up llmosaic version to 0.1.9

* Complete migration to tools

* Update package lock

* Correct plugin implementation

* Fix i18n error

* Show model name instead of id in the assistant creation page

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -267,6 +267,7 @@
   "openai-backend": "OpenAI API",
   "localai-backend": "LocalAI Server",
   "save": "Save",
+  "anthropic-backend": "Anthropic Backend",
   "select_assistant": "Select an assistant",
   "create_user": "Create user",
   "create_assistant": "Create assistant",
