Add support for Groq and Together AI

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -267,7 +267,9 @@
   "openai-backend": "OpenAI API",
   "localai-backend": "LocalAI Server",
   "save": "Save",
-  "anthropic-backend": "Anthropic Backend",
+  "anthropic-backend": "Anthropic API",
+  "groq-backend": "Groq Cloud",
+  "togetherai-backend": "Together AI API",
   "select_assistant": "Select an assistant",
   "create_user": "Create user",
   "create_assistant": "Create assistant",
