New Sidebar Icons (#94)
* Add missing i18n string

* Change icons

* Change icon size

* Remove underline on admin settings navbar

* Upgrade lucide-react package to 0.376.0

* Fix resolution of the avatar image

* Remove the profile pricture label

* Start editing the navbar

* Update Navbar

* Create new ProfileLayout

* Revert to before editing the navbar

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -275,5 +275,6 @@
   "create_assistant": "Create assistant",
   "create_backend": "Create backend",
   "create_tool": "Create tool",
-  "create_connection": "Create connection"
+  "create_connection": "Create connection",
+  "assistant-owner-updated": "The assistant owner has been successfully updated"
 }
