--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -278,5 +278,9 @@
   "create_backend": "Create backend",
   "create_tool": "Create tool",
   "create_connection": "Create connection",
-  "assistant-owner-updated": "The assistant owner has been successfully updated"
+  "assistant-owner-updated": "The assistant owner has been successfully updated",
+  "rename": "Rename",
+  "today": "Today",
+  "previous-week": "Previous 7 Days",
+  "older": "Older"
 }
