Converted user page to cards, with modal password change

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -54,6 +54,8 @@
   "clear-all-messages": "Are you sure you want to clear all messages?",
   "message-logicle": "Message Logicle Chat...",
   "confirm-new-password": "Confirm New Password",
+  "change_password": "Change password",
+  "enter_password": "Enter password",
   "hi": "Hi",
   "add-user": "Add user",
   "description": "Description",
@@ -79,6 +81,7 @@
   "your-name": "Your name",
   "your-email": "Your email",
   "save-changes": "Save Changes",
+  "password-successfully-updated": "Password has been successfully updated",
   "backend-successfully-updated": "Backend has been successfully updated",
   "backend-successfully-created": "Backend has been successfully created",
   "assistant-successfully-updated": "Assistant has been successfully updated",
