Modal dialog with multiple selection for workspace user addition

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "new-chat-title": "Logicle Chat",
   "table-column-name": "Name",
+  "table-column-selected": "Selected",
   "table-column-type": "Type",
   "table-column-email": "Email",
   "table-column-user-role": "Role",
