--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -136,7 +136,8 @@
   "close": "Close",
   "unknown-error": "Unknown Error",
   "configure": "Configure",
-  "add-member": "Add Member",
+  "add-members": "Add Members",
+  "select-members-to-add": "Select workspace members",
   "add-connection": "Add Connection",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
   "saml-config-updated": "SAML Config updated successfully.",
