--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -224,7 +224,7 @@
   "search": "Search",
   "search_placeholder": "Search...",
   "select_assistant_owner": "Select the assistant owner...",
-  "select_assistant": "Select an assistant",
+  "select_assistant": "Choose an assistant",
   "select_owner_placeholder": "Select an owner...",
   "select_role_placeholder": "Select a role...",
   "select_role": "Select a role",
