Most active users page

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -165,7 +165,7 @@
   "metadata-xml": "Metadata XML",
   "model": "Model",
   "my_assistants": "My assistants",
-  "most-active-workspaces": "Most active workspaces",
+  "most-active-users": "Most active users",
   "my-profile": "My profile",
   "name": "Name",
   "new-api-key-description": "API keys allow your app to communicate the API.",
