--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -163,6 +163,7 @@
   "messages": "Messages",
   "metadata-url": "Metadata URL",
   "metadata-xml": "Metadata XML",
+  "monthly-usage": "Monthly Usage",
   "model": "Model",
   "my_assistants": "My assistants",
   "most-active-users": "Most active users",
