--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -289,6 +289,7 @@
   "workspace-name-placeholder": "Workspace Name",
   "workspace-not-found": "Workspace not found",
   "workspace-removed-successfully": "Workspace removed successfully.",
+  "workspace-successfully-updated": "Workspace has been successfully updated",
   "workspace-settings": "Workspace Settings",
   "workspace-slug-description": "A unique ID used to identify this workspace in URLs.",
   "workspace-slug-label": "Slug",
