--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -112,6 +112,7 @@
   "current-password": "Current Password",
   "daily-usage": "Daily Usage",
   "dashboard": "Dashboard",
+  "default-redirect-url": "Default redirect URL",
   "delete-member-warning": "Deleting a member will delete all activites related to that member. This action cannot be undone.",
   "delete-sso-connection-confirmation": "Are you sure you want to delete this SSO Connection? This action can not be undone.",
   "delete-sso-connection": "Delete SSO Connection",
@@ -199,6 +200,7 @@
   "profile": "Profile",
   "provision": "Provision and de-provision users with your directory provider.",
   "public_display_name": "The name of the backend",
+  "redirect-url": "Redirect URL",
   "remove-assistant-confirmation": "Are you sure you want to remove this assistant? This action cannot be undone",
   "remove-assistant": "Remove assistant",
   "remove-backend-confirmation": "Are you sure you want to delete the backend? Deleting the backend will delete all resources and data associated with the backend forever.",
