--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -29,6 +29,7 @@
   "assertion_signature": "Assertion Signature",
   "assistant-deleted": "Assistant successfully deleted",
   "assistant-description-field-placeholder": "Add a short description of what this Assistant does",
+  "assistant-duplicated": "Assistant successfully duplicated",
   "assistant-owner-updated": "The assistant owner has been successfully updated",
   "assistant-successfully-created": "Assistant has been successfully created",
   "assistant-successfully-updated": "Assistant has been successfully updated",
