--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -303,5 +303,8 @@
   "workspaces": "Workspaces",
   "you-have-logged-in-using": "You have logged in using",
   "your-email": "Your email",
-  "your-name": "Your name"
+  "your-name": "Your name",
+  "duplicate": "Duplicate",
+  "backends-locked": "Unable to delete the backend because it is locked",
+  "workspace-deleted": "API key deleted successfully"
 }
