--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -306,5 +306,6 @@
   "your-name": "Your name",
   "duplicate": "Duplicate",
   "backends-locked": "Unable to delete the backend because it is locked",
-  "workspace-deleted": "API key deleted successfully"
+  "workspace-deleted": "API key deleted successfully",
+  "id": "Id"
 }
