Added "yesterday" when grouping by times chats

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -301,6 +301,7 @@
   "workspace-slug": "Workspace Slug",
   "workspace": "Workspace",
   "workspaces": "Workspaces",
+  "yesterday": "Yesterday",
   "you-have-logged-in-using": "You have logged in using",
   "your-email": "Your email",
   "your-name": "Your name",
