--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -12,6 +12,7 @@
   "all-backends": "Backends",
   "all-products": "All Products",
   "all-samlconnections": "SSO Connections",
+  "all-tools": "Tools",
   "all-users": "Users",
   "all-workspaces": "Workspaces",
   "allow-only-work-email": "Please use your work email to create an account.",
