Fix preview reset visibility

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -197,6 +197,7 @@
   "password-successfully-updated": "Password has been successfully updated",
   "password-updated": "Password updated successfully.",
   "password": "Password",
+  "preview": "Preview",
   "previous-week": "Previous 7 Days",
   "pricing": "Pricing",
   "products": "Products",
