Rough chips based UI for tags

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -151,6 +151,7 @@
   "hi": "Hi",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
+  "insert_a_tag_and_press_enter": "Insert a tag and press enter",
   "invalid-credentials": "Invalid login credentials",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "leave-workspace-confirmation": "Are you sure you want to leave the workspace? You'll lose access to all resources and data associated with the workspace.",
@@ -279,6 +280,7 @@
   "table-column-sharing": "Sharing",
   "table-column-type": "Type",
   "table-column-user-role": "Role",
+  "tags": "Tags",
   "temperature": "Temperature",
   "today": "Today",
   "togetherai-backend": "Together AI API",
