Prevent creation of unsupported providers

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -192,7 +192,7 @@
   "no-api-key-title": "You haven't created any API Keys yet",
   "no-credentials": "No credentials found.",
   "older": "Older",
-  "openai-backend": "OpenAI API",
+  "openai-backend": "OpenAI",
   "or-sign-in-with": "Or Sign In With",
   "password-is-required": "The Password field is required",
   "password-reset-link-sent": "Password reset link sent",
