Add edit assistant to assistant menu

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -147,6 +147,7 @@
   "frequently-asked": "Frequently asked questions",
   "get-started": "Get Started",
   "groq-backend": "Groq Cloud",
+  "hide-in-sidebar": "Hide in sidebar",
   "logiclecloud-backend": "Logicle Cloud",
   "hi": "Hi",
   "id": "Id",
@@ -247,6 +248,7 @@
   "settings": "Settings",
   "setup-saml-auth": "Fill out the information below to set up SAML authentication for added security",
   "share_with_workspace": "Share with workspace",
+  "show-in-sidebar": "Show in sidebar",
   "sign-in-with-email": "Sign in with Email",
   "sign-in-with-password": "Sign in with Password",
   "sign-in": "Sign in",
