Added an entry in app menu to navigate to "my assistants" page

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -175,8 +175,8 @@
   "metadata-xml": "Metadata XML",
   "monthly-usage": "Monthly Usage",
   "model": "Model",
-  "my_assistants": "My assistants",
   "most-active-users": "Most active users",
+  "my-assistants": "My assistants",
   "my-profile": "My profile",
   "name": "Name",
   "new-api-key-description": "API keys allow your app to communicate the API.",
