--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -152,7 +152,7 @@
   "hi": "Hi",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
-  "insert_a_prompt_and_press_enter": "Insert a prompt and press enter",
+  "insert_a_prompt": "Insert a prompt",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
   "invalid-credentials": "Invalid login credentials",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
