--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -233,6 +233,7 @@
   "role": "Role",
   "saml-config-updated": "SAML Config updated successfully.",
   "saml-connection-established": "Single Sign-On connection is enabled for your workspace.",
+  "save_and_submit": "Save & Submit",
   "save-changes": "Save Changes",
   "save": "Save",
   "scim-url": "SCIM URL.",
