--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -153,6 +153,7 @@
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
   "insert_a_prompt": "Insert a prompt",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
+  "insert_openapi_spec_placeholder": "Insert a YAML OpenAPI spec...",
   "invalid-credentials": "Invalid login credentials",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
   "leave-workspace-confirmation": "Are you sure you want to leave the workspace? You'll lose access to all resources and data associated with the workspace.",
@@ -194,6 +195,7 @@
   "no-credentials": "No credentials found.",
   "older": "Older",
   "openai-backend": "OpenAI",
+  "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
   "password-is-required": "The Password field is required",
   "password-reset-link-sent": "Password reset link sent",
