--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -156,6 +156,7 @@
   "insert_openapi_spec_placeholder": "Insert a YAML OpenAPI spec...",
   "invalid-credentials": "Invalid login credentials",
   "invite-create-account": "To continue, you must either create a new account or login to an existing account.",
+  "invocation_of_tool": "Invocation of tool",
   "leave-workspace-confirmation": "Are you sure you want to leave the workspace? You'll lose access to all resources and data associated with the workspace.",
   "leave-workspace-success": "You have left the workspace successfully.",
   "leave-workspace": "Leave Workspace",
@@ -197,6 +198,7 @@
   "openai-backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "or-sign-in-with": "Or Sign In With",
+  "parameters": "Parameters",
   "password-is-required": "The Password field is required",
   "password-reset-link-sent": "Password reset link sent",
   "password-successfully-updated": "Password has been successfully updated",
