--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -145,6 +145,7 @@
   "events-to-send": "Events to send",
   "features": "Features",
   "frequently-asked": "Frequently asked questions",
+  "gcpvertex-backend": "Gcp Vertex",
   "get-started": "Get Started",
   "hide-in-sidebar": "Hide in sidebar",
   "logiclecloud-backend": "Logicle Cloud",
@@ -294,6 +295,7 @@
   "today": "Today",
   "togetherai-backend": "Together AI API",
   "token-limit": "Token Limit",
+  "tool-successfully-created": "Tool has been successfully created",
   "tools": "Tools",
   "unknown-error": "Unknown Error",
   "update-account": "Update Account",
