Renamed "prompt" to "conversation starter"

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -71,6 +71,7 @@
   "continue-with-saml-sso": "Continue with SAML SSO",
   "configure_assistant_before_sending_messages": "Configure assistant before sending messages",
   "conversations": "Conversations",
+  "conversation_starters": "Conversation starters",
   "copied-to-clipboard": "Copied to clipboard",
   "copy-paste-metadata": "Copy and paste Metadata XML here.",
   "copy-to-clipboard": "Copy",
@@ -151,7 +152,7 @@
   "hi": "Hi",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
-  "insert_a_prompt": "Insert a prompt",
+  "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
   "insert_openapi_spec_placeholder": "Insert a YAML OpenAPI spec...",
   "invalid-credentials": "Invalid login credentials",
