--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -25,6 +25,7 @@
   "api-key-created": "API key created successfully",
   "api-key": "API Key",
   "api-keys": "API Keys",
+  "apikey-added": "API key added successfully",
   "apikey-deleted": "API key deleted successfully",
   "apikey-delete-confirm": "Delete Api Key",
   "apikey-delete-warning": "Deleting an api key will disrupt all services using it. This action cannot be undone.",
