--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -22,10 +22,13 @@
   "anthropic-backend": "Anthropic API",
   "api_endpoint_placeholder": "Enter your api endpoint",
   "api_key_placeholder": "Enter the api key to access the LLM APIs",
-  "api-key-created": "API key created successfully",
-  "api-key-deleted": "API key deleted successfully",
   "api-key": "API Key",
   "api-keys": "API Keys",
+  "apikey-added": "API key added successfully",
+  "apikey-deleted": "API key deleted successfully",
+  "apikey-delete-confirm": "Delete Api Key",
+  "apikey-delete-warning": "Deleting an api key will disrupt all services using it. This action cannot be undone.",
+  "apikey-description-placeholder": "Easy to remember description of the Api Key...",
   "assertion_encryption": "Assertion Encryption",
   "assertion_signature": "Assertion Signature",
   "assistant-deleted": "Assistant successfully deleted",
@@ -99,7 +102,7 @@
   "create_user": "Create user",
   "create-a-new-account": "Sign up",
   "create-account": "Create Account",
-  "create-api-key": "Create API Key",
+  "create-apikey": "Create API Key",
   "create-assistant": "Create assistant",
   "create-backend": "Create Backend",
   "create-connection": "Create Connection",
