Show API key at creation time

--- a/logicle/locales/en/common.json
+++ b/logicle/locales/en/common.json
@@ -25,10 +25,12 @@
   "api-key": "API Key",
   "api-keys": "API Keys",
   "apikey-added": "API key added successfully",
+  "apikey-created": "API key created",
   "apikey-deleted": "API key deleted successfully",
   "apikey-delete-confirm": "Delete Api Key",
   "apikey-delete-warning": "Deleting an api key will disrupt all services using it. This action cannot be undone.",
   "apikey-description-placeholder": "Easy to remember description of the Api Key...",
+  "apikey-wont-be-able-to-see-again": "You won't be able to see this API key again. Store it in a secure place, such as a password manager or secret store",
   "assertion_encryption": "Assertion Encryption",
   "assertion_signature": "Assertion Signature",
   "assistant-deleted": "Assistant successfully deleted",
