First try with i18n

--- a/logicle/locales/it/common.json
+++ b/logicle/locales/it/common.json
@@ -51,7 +51,7 @@
   "cancel": "Cancel",
   "cant_create_assistant_if_no_backend": "Can't create an assistant if no backend is defined",
   "change_owner": "Change owner",
-  "change-password": "Change Password",
+  "change-password": "Cambia Password",
   "chat": "Chat",
   "choose-new-provider-type-description": "Choose the type of LLM provider for the new backend",
   "choose-new-provider-type": "Choose the provider type",
@@ -186,12 +186,12 @@
   "model": "Model",
   "most-active-users": "Most active users",
   "my-assistants": "My assistants",
-  "my-profile": "My profile",
+  "my-profile": "Il mio profilo",
   "name": "Name",
   "new-api-key-description": "API keys allow your app to communicate the API.",
   "new-api-key": "New API Key",
   "new-api-warning": "Save this API key somewhere safe. You won't be able to see it again once you close this dialog.",
-  "new-chat": "New chat",
+  "new-chat": "Nuova chat",
   "new-chat-title": "Logicle Chat",
   "new-password": "New Password",
   "new-photo": "Select New Photo",
@@ -211,7 +211,7 @@
   "password-successfully-updated": "Password has been successfully updated",
   "password-updated": "Password updated successfully.",
   "password": "Password",
-  "preferences": "Preferences",
+  "preferences": "Preferenze",
   "preview": "Preview",
   "previous-week": "Previous 7 Days",
   "pricing": "Pricing",
@@ -252,7 +252,7 @@
   "search": "Search",
   "search_placeholder": "Search...",
   "select_assistant_owner": "Select the assistant owner...",
-  "select_assistant": "Choose an assistant",
+  "select_assistant": "Scegli un assistente",
   "select_owner_placeholder": "Select an owner...",
   "select_role_placeholder": "Select a role...",
   "select_role": "Select a role",
